[metadata]
name = optionchain-stream-india
version = 1.0.0
description = India broker option chain fetcher — WIDE format, broker-agnostic
author = Mayank Lavania
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lavs9/optionchain_stream_india
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Libraries

[options]
packages = find:
python_requires = >=3.10
install_requires =
    redis
    requests
    pandas>=2.0.0
    upstox-python-sdk
    dhanhq
    fyers-apiv3

[options.extras_require]
zerodha =
    kiteconnect
    py_vollib
all =
    kiteconnect
    py_vollib
